--- a/gemrb/GemRB.cfg.sample
+++ b/gemrb/GemRB.cfg.sample
@@ -74,7 +74,8 @@ TooltipDelay=500
 #####################################################
 
 # Load NullSound driver only if OpenALAudio driver failed
-DelayPlugin=libNullSound.so
+DelayPlugin=NullSound.so
+DelayPlugin=NullSound.dll
 DelayPlugin=libNullSound.dll
 
 # Volume of ambient sounds
