--- a/gemrb/plugins/AREImporter/Makefile.am
+++ b/gemrb/plugins/AREImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libAREImporter.la
-INCLUDES = $(all_includes)
-libAREImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libAREImporter_la_METASOURCES = AUTO
-libAREImporter_la_SOURCES = AREImp.cpp
-noinst_HEADERS = AREImp.h
+plugin_LTLIBRARIES = AREImporter.la
+AREImporter_la_LDFLAGS = -module -avoid-version -shared
+AREImporter_la_SOURCES = AREImp.cpp AREImp.h
