--- a/gemrb/plugins/BAMImporter/Makefile.am
+++ b/gemrb/plugins/BAMImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libBAMImporter.la
-INCLUDES = $(all_includes)
-libBAMImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libBAMImporter_la_METASOURCES = AUTO
-libBAMImporter_la_SOURCES = BAMImp.cpp
-noinst_HEADERS = BAMImp.h
+plugin_LTLIBRARIES = BAMImporter.la
+BAMImporter_la_LDFLAGS = -module -avoid-version -shared
+BAMImporter_la_SOURCES = BAMImp.cpp BAMImp.h
