--- a/gemrb/plugins/BIFImporter/Makefile.am
+++ b/gemrb/plugins/BIFImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libBIFImporter.la
-INCLUDES = $(all_includes)
-libBIFImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libBIFImporter_la_METASOURCES = AUTO
-libBIFImporter_la_SOURCES = BIFImp.cpp
-noinst_HEADERS = BIFImp.h
+plugin_LTLIBRARIES = BIFImporter.la
+BIFImporter_la_LDFLAGS = -module -avoid-version -shared
+BIFImporter_la_SOURCES = BIFImp.cpp BIFImp.h
