--- a/gemrb/plugins/BMPImporter/Makefile.am
+++ b/gemrb/plugins/BMPImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libBMPImporter.la
-INCLUDES = $(all_includes)
-libBMPImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libBMPImporter_la_METASOURCES = AUTO
-libBMPImporter_la_SOURCES = BMPImp.cpp
-noinst_HEADERS = BMPImp.h
+plugin_LTLIBRARIES = BMPImporter.la
+BMPImporter_la_LDFLAGS = -module -avoid-version -shared
+BMPImporter_la_SOURCES = BMPImp.cpp BMPImp.h
