--- a/gemrb/plugins/FXOpcodes/Makefile.am
+++ b/gemrb/plugins/FXOpcodes/Makefile.am
@@ -1,5 +1,3 @@
-plugin_LTLIBRARIES = libFXOpcodes.la
-INCLUDES = $(all_includes)
-libFXOpcodes_la_LDFLAGS = -module -version-info 0:0:0
-libFXOpcodes_la_METASOURCES = AUTO
-libFXOpcodes_la_SOURCES = FXOpc.cpp
+plugin_LTLIBRARIES = FXOpcodes.la
+FXOpcodes_la_LDFLAGS = -module -avoid-version -shared
+FXOpcodes_la_SOURCES = FXOpc.cpp
