--- a/gemrb/plugins/GAMImporter/Makefile.am
+++ b/gemrb/plugins/GAMImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libGAMImporter.la
-INCLUDES = $(all_includes)
-libGAMImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libGAMImporter_la_METASOURCES = AUTO
-libGAMImporter_la_SOURCES = GAMImp.cpp
-noinst_HEADERS = GAMImp.h
+plugin_LTLIBRARIES = GAMImporter.la
+GAMImporter_la_LDFLAGS = -module -avoid-version -shared
+GAMImporter_la_SOURCES = GAMImp.cpp GAMImp.h
