--- a/gemrb/plugins/ITMImporter/Makefile.am
+++ b/gemrb/plugins/ITMImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libITMImporter.la
-INCLUDES = $(all_includes)
-libITMImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libITMImporter_la_METASOURCES = AUTO
-libITMImporter_la_SOURCES = ITMImp.cpp
-noinst_HEADERS = ITMImp.h
+plugin_LTLIBRARIES = ITMImporter.la
+ITMImporter_la_LDFLAGS = -module -avoid-version -shared
+ITMImporter_la_SOURCES = ITMImp.cpp ITMImp.h
