--- a/gemrb/plugins/MUSImporter/Makefile.am
+++ b/gemrb/plugins/MUSImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libMUSImporter.la
-INCLUDES = $(all_includes)
-libMUSImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libMUSImporter_la_METASOURCES = AUTO
-libMUSImporter_la_SOURCES = MUSImp.cpp
-noinst_HEADERS = MUSImp.h
+plugin_LTLIBRARIES = MUSImporter.la
+MUSImporter_la_LDFLAGS = -module -avoid-version -shared
+MUSImporter_la_SOURCES = MUSImp.cpp MUSImp.h
