--- a/gemrb/plugins/NullSound/Makefile.am
+++ b/gemrb/plugins/NullSound/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libNullSound.la
-INCLUDES = $(all_includes)
-libNullSound_la_LDFLAGS = -module -version-info 0:0:0
-libNullSound_la_METASOURCES = AUTO
-libNullSound_la_SOURCES = NullSnd.cpp
-noinst_HEADERS = NullSnd.h
+plugin_LTLIBRARIES = NullSound.la
+NullSound_la_LDFLAGS = -module -avoid-version -shared
+NullSound_la_SOURCES = NullSnd.cpp NullSnd.h
