--- a/gemrb/plugins/PLTImporter/Makefile.am
+++ b/gemrb/plugins/PLTImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libPLTImporter.la
-INCLUDES = $(all_includes)
-libPLTImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libPLTImporter_la_METASOURCES = AUTO
-libPLTImporter_la_SOURCES = PLTImp.cpp
-noinst_HEADERS = PLTImp.h
+plugin_LTLIBRARIES = PLTImporter.la
+PLTImporter_la_LDFLAGS = -module -avoid-version -shared
+PLTImporter_la_SOURCES = PLTImp.cpp PLTImp.h
