--- a/gemrb/plugins/PNGImporter/Makefile.am
+++ b/gemrb/plugins/PNGImporter/Makefile.am
@@ -1,6 +1,4 @@
-plugin_LTLIBRARIES = libPNGImporter.la
-INCLUDES = $(all_includes)
-libPNGImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@ @LIBPNG@
-libPNGImporter_la_METASOURCES = AUTO
-libPNGImporter_la_SOURCES = PNGImp.cpp
-noinst_HEADERS = PNGImp.h
+plugin_LTLIBRARIES = PNGImporter.la
+PNGImporter_la_LDFLAGS = -module -avoid-version -shared
+PNGImporter_la_LIBADD = @LIBPNG@
+PNGImporter_la_SOURCES = PNGImp.cpp PNGImp.h
