--- a/gemrb/plugins/PSTOpcodes/Makefile.am
+++ b/gemrb/plugins/PSTOpcodes/Makefile.am
@@ -1,5 +1,3 @@
-plugin_LTLIBRARIES = libPSTOpcodes.la
-INCLUDES = $(all_includes)
-libPSTOpcodes_la_LDFLAGS = -module -version-info 0:0:0
-libPSTOpcodes_la_METASOURCES = AUTO
-libPSTOpcodes_la_SOURCES = PSTOpc.cpp
+plugin_LTLIBRARIES = PSTOpcodes.la
+PSTOpcodes_la_LDFLAGS = -module -avoid-version -shared
+PSTOpcodes_la_SOURCES = PSTOpc.cpp
