--- a/gemrb/plugins/SPLImporter/Makefile.am
+++ b/gemrb/plugins/SPLImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libSPLImporter.la
-INCLUDES = $(all_includes)
-libSPLImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libSPLImporter_la_METASOURCES = AUTO
-libSPLImporter_la_SOURCES = SPLImp.cpp
-noinst_HEADERS = SPLImp.h
+plugin_LTLIBRARIES = SPLImporter.la
+SPLImporter_la_LDFLAGS = -module -avoid-version -shared
+SPLImporter_la_SOURCES = SPLImp.cpp SPLImp.h
