--- a/gemrb/plugins/STOImporter/Makefile.am
+++ b/gemrb/plugins/STOImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libSTOImporter.la
-INCLUDES = $(all_includes)
-libSTOImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libSTOImporter_la_METASOURCES = AUTO
-libSTOImporter_la_SOURCES = STOImp.cpp
-noinst_HEADERS = STOImp.h
+plugin_LTLIBRARIES = STOImporter.la
+STOImporter_la_LDFLAGS = -module -avoid-version -shared
+STOImporter_la_SOURCES = STOImp.cpp STOImp.h
