--- a/gemrb/plugins/TISImporter/Makefile.am
+++ b/gemrb/plugins/TISImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libTISImporter.la
-INCLUDES = $(all_includes)
-libTISImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libTISImporter_la_METASOURCES = AUTO
-libTISImporter_la_SOURCES = TISImp.cpp
-noinst_HEADERS = TISImp.h
+plugin_LTLIBRARIES = TISImporter.la
+TISImporter_la_LDFLAGS = -module -avoid-version -shared
+TISImporter_la_SOURCES = TISImp.cpp TISImp.h
