--- a/gemrb/plugins/TLKImporter/Makefile.am
+++ b/gemrb/plugins/TLKImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libTLKImporter.la
-INCLUDES = $(all_includes)
-libTLKImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libTLKImporter_la_METASOURCES = AUTO
-libTLKImporter_la_SOURCES = TLKImp.cpp TlkOverride.cpp
-noinst_HEADERS = TLKImp.h TlkOverride.h
+plugin_LTLIBRARIES = TLKImporter.la
+TLKImporter_la_LDFLAGS = -module -avoid-version -shared
+TLKImporter_la_SOURCES = TLKImp.cpp TLKImp.h TlkOverride.cpp TlkOverride.h
