--- a/gemrb/plugins/WEDImporter/Makefile.am
+++ b/gemrb/plugins/WEDImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libWEDImporter.la
-INCLUDES = $(all_includes)
-libWEDImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libWEDImporter_la_METASOURCES = AUTO
-libWEDImporter_la_SOURCES = WEDImp.cpp
-noinst_HEADERS = WEDImp.h
+plugin_LTLIBRARIES = WEDImporter.la
+WEDImporter_la_LDFLAGS = -module -avoid-version -shared
+WEDImporter_la_SOURCES = WEDImp.cpp WEDImp.h
