--- a/gemrb/plugins/WMPImporter/Makefile.am
+++ b/gemrb/plugins/WMPImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libWMPImporter.la
-INCLUDES = $(all_includes)
-libWMPImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libWMPImporter_la_METASOURCES = AUTO
-libWMPImporter_la_SOURCES = WMPImp.cpp
-noinst_HEADERS = WMPImp.h
+plugin_LTLIBRARIES = WMPImporter.la
+WMPImporter_la_LDFLAGS = -module -avoid-version -shared
+WMPImporter_la_SOURCES = WMPImp.cpp WMPImp.h
