--- a/gemrb/plugins/ZLibMgr/Makefile.am
+++ b/gemrb/plugins/ZLibMgr/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libZLibMgr.la
-INCLUDES = $(all_includes)
-libZLibMgr_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libZLibMgr_la_METASOURCES = AUTO
-libZLibMgr_la_SOURCES = ZLibManager.cpp
-noinst_HEADERS = ZLibManager.h
+plugin_LTLIBRARIES = ZLibManger.la
+ZLibManger_la_LDFLAGS = -module -avoid-version -shared
+ZLibManger_la_SOURCES = ZLibManager.cpp ZLibManager.h
