--- a/gemrb/plugins/2DAImporter/Makefile.am
+++ b/gemrb/plugins/2DAImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = lib2DAImporter.la
-INCLUDES = $(all_includes)
-lib2DAImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-lib2DAImporter_la_METASOURCES = AUTO
-lib2DAImporter_la_SOURCES = 2DAImp.cpp
-noinst_HEADERS = 2DAImp.h
+plugin_LTLIBRARIES = 2DAImporter.la
+2DAImporter_la_LDFLAGS = -module -avoid-version -shared
+2DAImporter_la_SOURCES = 2DAImp.cpp 2DAImp.h
