--- a/gemrb/plugins/CHUImporter/Makefile.am
+++ b/gemrb/plugins/CHUImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libCHUImporter.la
-INCLUDES = $(all_includes)
-libCHUImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libCHUImporter_la_METASOURCES = AUTO
-libCHUImporter_la_SOURCES = CHUImp.cpp
-noinst_HEADERS = CHUImp.h
+plugin_LTLIBRARIES = CHUImporter.la
+CHUImporter_la_LDFLAGS = -module -avoid-version -shared
+CHUImporter_la_SOURCES = CHUImp.cpp CHUImp.h
