--- a/gemrb/plugins/CREImporter/Makefile.am
+++ b/gemrb/plugins/CREImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libCREImporter.la
-INCLUDES = $(all_includes)
-libCREImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libCREImporter_la_METASOURCES = AUTO
-libCREImporter_la_SOURCES = CREImp.cpp
-noinst_HEADERS = CREImp.h
+plugin_LTLIBRARIES = CREImporter.la
+CREImporter_la_LDFLAGS = -module -avoid-version -shared
+CREImporter_la_SOURCES = CREImp.cpp CREImp.h
