--- a/gemrb/plugins/EFFImporter/Makefile.am
+++ b/gemrb/plugins/EFFImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libEFFImporter.la
-INCLUDES = $(all_includes)
-libEFFImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libEFFImporter_la_METASOURCES = AUTO
-libEFFImporter_la_SOURCES = EFFImp.cpp
-noinst_HEADERS = EFFImp.h
+plugin_LTLIBRARIES = EFFImporter.la
+EFFImporter_la_LDFLAGS = -module -avoid-version -shared
+EFFImporter_la_SOURCES = EFFImp.cpp EFFImp.h
