--- a/gemrb/plugins/IDSImporter/Makefile.am
+++ b/gemrb/plugins/IDSImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libIDSImporter.la
-INCLUDES = $(all_includes)
-libIDSImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libIDSImporter_la_METASOURCES = AUTO
-libIDSImporter_la_SOURCES = IDSImp.cpp
-noinst_HEADERS = IDSImpDefs.h IDSImp.h
+plugin_LTLIBRARIES = IDSImporter.la
+IDSImporter_la_LDFLAGS = -module -avoid-version -shared
+IDSImporter_la_SOURCES = IDSImp.cpp IDSImp.h
