--- a/gemrb/plugins/INIImporter/Makefile.am
+++ b/gemrb/plugins/INIImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libINIImporter.la
-INCLUDES = $(all_includes)
-libINIImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libINIImporter_la_METASOURCES = AUTO
-libINIImporter_la_SOURCES = INIImp.cpp
-noinst_HEADERS = INIImp.h
+plugin_LTLIBRARIES = INIImporter.la
+INIImporter_la_LDFLAGS = -module -avoid-version -shared
+INIImporter_la_SOURCES = INIImp.cpp INIImp.h
