--- a/gemrb/plugins/IWDOpcodes/Makefile.am
+++ b/gemrb/plugins/IWDOpcodes/Makefile.am
@@ -1,5 +1,3 @@
-plugin_LTLIBRARIES = libIWDOpcodes.la
-INCLUDES = $(all_includes)
-libIWDOpcodes_la_LDFLAGS = -module -version-info 0:0:0
-libIWDOpcodes_la_METASOURCES = AUTO
-libIWDOpcodes_la_SOURCES = IWDOpc.cpp
+plugin_LTLIBRARIES = IWDOpcodes.la
+IWDOpcodes_la_LDFLAGS = -module -avoid-version -shared
+IWDOpcodes_la_SOURCES = IWDOpc.cpp
