--- a/gemrb/plugins/KEYImporter/Makefile.am
+++ b/gemrb/plugins/KEYImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libKEYImporter.la
-INCLUDES = $(all_includes)
-libKEYImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libKEYImporter_la_METASOURCES = AUTO
-libKEYImporter_la_SOURCES = Dictionary.cpp KeyImp.cpp
-noinst_HEADERS = KeyImp.h Dictionary.h
+plugin_LTLIBRARIES = KEYImporter.la
+KEYImporter_la_LDFLAGS = -module -avoid-version -shared
+KEYImporter_la_SOURCES = Dictionary.cpp Dictionary.h KeyImp.cpp KeyImp.h
