--- a/gemrb/plugins/MOSImporter/Makefile.am
+++ b/gemrb/plugins/MOSImporter/Makefile.am
@@ -1,6 +1,3 @@
-plugin_LTLIBRARIES = libMOSImporter.la
-INCLUDES = $(all_includes)
-libMOSImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
-libMOSImporter_la_METASOURCES = AUTO
-libMOSImporter_la_SOURCES = MOSImp.cpp
-noinst_HEADERS = MOSImp.h
+plugin_LTLIBRARIES = MOSImporter.la
+MOSImporter_la_LDFLAGS = -module -avoid-version -shared
+MOSImporter_la_SOURCES = MOSImp.cpp MOSImp.h
