--- a/gemrb/plugins/OpenALAudio/Makefile.am
+++ b/gemrb/plugins/OpenALAudio/Makefile.am
@@ -1,6 +1,4 @@
-plugin_LTLIBRARIES = libOpenALAudio.la
-INCLUDES = $(all_includes)
-libOpenALAudio_la_LDFLAGS = -module -version-info 0:0:0 @SDL_LIBS@ @LIBPTHREAD@ @OPENAL_LIBS@
-libOpenALAudio_la_METASOURCES = AUTO
-libOpenALAudio_la_SOURCES = OpenALAudio.cpp AmbientMgrAL.cpp StackLock.cpp
-noinst_HEADERS = OpenALAudio.h AmbientMgrAL.h StackLock.h
+plugin_LTLIBRARIES = OpenALAudio.la
+OpenALAudio_la_LDFLAGS = -module -avoid-version -shared
+OpenALAudio_la_LIBADD = @SDL_LIBS@ @OPENAL_LIBS@
+OpenALAudio_la_SOURCES = OpenALAudio.cpp OpenALAudio.h AmbientMgrAL.cpp AmbientMgrAL.h StackLock.cpp StackLock.h
