KEYImporter: Split into KEYImporter and DirectoryImporter.
Also, move search path handling to GameData.

Signed-off-by: Tom Prince <tom.prince@ualberta.net>
Signed-off-by: Alyssa Milburn <fuzzie@fuzzie.org>

--- a/configure.in
+++ b/configure.in
@@ -251,6 +251,7 @@ gemrb/plugins/IDSImporter/Makefile
 gemrb/plugins/INIImporter/Makefile 
 gemrb/plugins/ITMImporter/Makefile 
 gemrb/plugins/KEYImporter/Makefile 
+gemrb/plugins/DirectoryImporter/Makefile
 gemrb/plugins/MOSImporter/Makefile 
 gemrb/plugins/MUSImporter/Makefile 
 gemrb/plugins/MVEPlayer/Makefile
