--- a/gemrb/plugins/CMakeLists.txt
+++ b/gemrb/plugins/CMakeLists.txt
@@ -9,6 +9,7 @@ ADD_SUBDIRECTORY( BMPImporter )
 ADD_SUBDIRECTORY( CHUImporter )
 ADD_SUBDIRECTORY( CREImporter )
 ADD_SUBDIRECTORY( DLGImporter )
+ADD_SUBDIRECTORY( DirectoryImporter )
 ADD_SUBDIRECTORY( EFFImporter )
 ADD_SUBDIRECTORY( FXOpcodes )
 ADD_SUBDIRECTORY( GAMImporter )
