--- a/gemrb/plugins/ZLibManager/Makefile.am
+++ b/gemrb/plugins/ZLibManager/Makefile.am
@@ -1,3 +1,3 @@
-plugin_LTLIBRARIES = ZLibManger.la
-ZLibManger_la_LDFLAGS = -module -avoid-version -shared
-ZLibManger_la_SOURCES = ZLibManager.cpp ZLibManager.h
+plugin_LTLIBRARIES = ZLibManager.la
+ZLibManager_la_LDFLAGS = -module -avoid-version -shared
+ZLibManager_la_SOURCES = ZLibManager.cpp ZLibManager.h
