gitignore: Add generated files, backups, and patch files.
Signed-off-by: Tom Prince <cougar@hermes>

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,32 @@
 *.pyc
+*.[oa]
+*~
+*.l[oa]
+*.swp
+Makefile
+Makefile.in
+.deps
+.libs
+.dirstamp
+*.patch
+*.orig
+*.rej
+*.diff
+
+/aclocal.m4
+/admin/config.guess
+/admin/config.sub
+/admin/depcomp
+/admin/install-sh
+/admin/ltmain.sh
+/admin/missing
+/autom4te.cache/
+/config.h
+/config.h.in
+/config.log
+/config.status
+/configure
+/gemrb.spec
+/gemrb/gemrb
+/libtool
+/stamp-h1
