cmake build fix

--- a/gemrb/plugins/CMakeLists.txt
+++ b/gemrb/plugins/CMakeLists.txt
@@ -33,5 +33,5 @@ ADD_SUBDIRECTORY( TISImporter )
 ADD_SUBDIRECTORY( TLKImporter )
 ADD_SUBDIRECTORY( WEDImporter )
 ADD_SUBDIRECTORY( WMPImporter )
-ADD_SUBDIRECTORY( ZLibMgr )
+ADD_SUBDIRECTORY( ZLibManager )
 ADD_SUBDIRECTORY( OpenALAudio )
