link the main binary against libpthread, to (hopefully) avoid gdb exploding

--- a/gemrb/Makefile.am
+++ b/gemrb/Makefile.am
@@ -10,7 +10,7 @@ INCLUDES= \
 	$(all_includes) \
 	$(PYTHON_INCLUDES)
 
-gemrb_LDFLAGS = $(all_libraries) 
+gemrb_LDFLAGS = $(all_libraries) @LIBPTHREAD@
 
 #install-data-local:
 #	$(INSTALL_DATA) GemRB.cfg* $(sysconfdir)
