--- a/gemrb/plugins/Core/Makefile.am
+++ b/gemrb/plugins/Core/Makefile.am
@@ -54,6 +54,7 @@ libgemrb_core_la_SOURCES = \
 	MapMgr.cpp \
 	Map.cpp \
 	Interface.cpp \
+	ResourceManager.cpp \
 	GameData.cpp \
 	ImageMgr.cpp \
 	ImageFactory.cpp \
