cmake: Move installation of plugins to macro.
Signed-off-by: Tom Prince <tom.prince@ualberta.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,7 @@ ENDIF(WIN32)
 IF(APPLE)
  TARGET_LINK_LIBRARIES(${plugin_name} gemrb_core)
 ENDIF(APPLE)
+INSTALL(TARGETS ${plugin_name} DESTINATION ${PLUGIN_INSTALL_DIR})
 ENDMACRO(ADD_GEMRB_PLUGIN)
 
 #gemrb overrides macro
