cmake: Add LAYOUT option to control install paths.
- home: current layout.
- fhs: (mostly?) Filesystem Hierarchy Standard compliant.
- opt: modified fhs, without gemrb subdirectories.

Signed-off-by: Tom Prince <tom.prince@ualberta.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,21 +11,75 @@ IF(PREFIX)
   SET(CMAKE_INSTALL_PREFIX ${PREFIX})
 ENDIF(PREFIX)
 
-IF( NOT PLUGIN_INSTALL_DIR )
- SET( PLUGIN_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/plugins )
-ENDIF( NOT PLUGIN_INSTALL_DIR )
+if (NOT "${LAYOUT}")
+	if (WIN32)
+		set(LAYOUT "home")
+	else (WIN32)
+		set(LAYOUT "fhs")
+	endif (WIN32)
+endif (NOT "${LAYOUT}")
 
-IF( NOT OVERRIDE_INSTALL_DIR )
- SET( OVERRIDE_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/override )
-ENDIF( NOT OVERRIDE_INSTALL_DIR )
+SET(LAYOUT CACHE STRING "Directory layout.")
 
-IF( NOT GUISCRIPTS_INSTALL_DIR )
- SET( GUISCRIPTS_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/GUIScripts )
-ENDIF( NOT GUISCRIPTS_INSTALL_DIR )
+if (${LAYOUT} MATCHES "home")
+	IF( NOT PLUGIN_DIR )
+		SET( PLUGIN_DIR ${CMAKE_INSTALL_PREFIX}/plugins )
+	ENDIF( NOT PLUGIN_DIR )
+	IF( NOT DATA_DIR )
+		SET( DATA_DIR ${CMAKE_INSTALL_PREFIX} )
+	ENDIF( NOT DATA_DIR )
+	IF( NOT MAN_DIR )
+		SET( MAN_DIR ${CMAKE_INSTALL_PREFIX}/man/man6 )
+	ENDIF( NOT MAN_DIR )
+	IF( NOT BIN_DIR )
+		SET( BIN_DIR ${CMAKE_INSTALL_PREFIX} )
+	ENDIF( NOT BIN_DIR )
+	IF( NOT SYSCONF_DIR )
+		SET( SYSCONF_DIR ${CMAKE_INSTALL_PREFIX} )
+	ENDIF( NOT SYSCONF_DIR )
+	IF( NOT LIB_DIR )
+		SET( LIB_DIR ${CMAKE_INSTALL_PREFIX} )
+	ENDIF( NOT LIB_DIR )
+elseif (${LAYOUT} MATCHES "fhs")
+	IF( NOT LIB_DIR )
+		SET( LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib/gemrb )
+	ENDIF( NOT LIB_DIR )
+	IF( NOT PLUGIN_DIR )
+		SET( PLUGIN_DIR ${LIB_DIR}/plugins )
+	ENDIF( NOT PLUGIN_DIR )
+	IF( NOT DATA_DIR )
+		SET( DATA_DIR ${CMAKE_INSTALL_PREFIX}/share/gemrb )
+	ENDIF( NOT DATA_DIR )
+	IF( NOT MAN_DIR )
+		SET( MAN_DIR ${CMAKE_INSTALL_PREFIX}/share/man/man6 )
+	ENDIF( NOT MAN_DIR )
+	IF( NOT BIN_DIR )
+		SET( BIN_DIR ${CMAKE_INSTALL_PREFIX}/bin )
+	ENDIF( NOT BIN_DIR )
+	IF( NOT SYSCONF_DIR )
+		SET( SYSCONF_DIR ${CMAKE_INSTALL_PREFIX}/etc/gemrb )
+	ENDIF( NOT SYSCONF_DIR )
+else (${LAYOUT} MATCHES "opt")
+	IF( NOT LIB_DIR )
+		SET( LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib )
+	ENDIF( NOT LIB_DIR )
+	IF( NOT PLUGIN_DIR )
+		SET( PLUGIN_DIR ${LIB_DIR}/plugins )
+	ENDIF( NOT PLUGIN_DIR )
+	IF( NOT DATA_DIR )
+		SET( DATA_DIR ${CMAKE_INSTALL_PREFIX}/share/ )
+	ENDIF( NOT DATA_DIR )
+	IF( NOT MAN_DIR )
+		SET( MAN_DIR ${CMAKE_INSTALL_PREFIX}/man/man6 )
+	ENDIF( NOT MAN_DIR )
+	IF( NOT BIN_DIR )
+		SET( BIN_DIR ${CMAKE_INSTALL_PREFIX}/bin )
+	ENDIF( NOT BIN_DIR )
+	IF( NOT SYSCONF_DIR )
+		SET( SYSCONF_DIR ${CMAKE_INSTALL_PREFIX}/etc )
+	ENDIF( NOT SYSCONF_DIR )
+endif (${LAYOUT} MATCHES "home")
 
-IF( NOT MANPAGE_INSTALL_DIR )
- SET( MANPAGE_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/share/man/man6 )
-ENDIF( NOT MANPAGE_INSTALL_DIR )
 
 IF(CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
@@ -80,7 +134,7 @@ ENDIF(UNIX)
 MESSAGE(STATUS "Looking for Ogg Vorbis support")
 FIND_LIBRARY(VORBIS_LIBRARY vorbisfile)
 
-ADD_DEFINITIONS("-DHAVE_CONFIG_H" -DPLUGINDIR="${PLUGIN_INSTALL_DIR}")
+ADD_DEFINITIONS("-DHAVE_CONFIG_H")
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 
@@ -131,17 +185,17 @@ ENDIF(WIN32)
 IF(APPLE)
  TARGET_LINK_LIBRARIES(${plugin_name} gemrb_core)
 ENDIF(APPLE)
-INSTALL(TARGETS ${plugin_name} DESTINATION ${PLUGIN_INSTALL_DIR})
+INSTALL(TARGETS ${plugin_name} DESTINATION ${PLUGIN_DIR})
 ENDMACRO(ADD_GEMRB_PLUGIN)
 
 #gemrb overrides macro
 MACRO(ADD_GEMRB_OVERRIDE game_name)
 FILE( GLOB FILES_TO_INSTALL *.2da *.bmp *.ini *.chu *.ids *.bcs *.vvc *.mos *.spl *.wav *.pro)
-INSTALL( FILES ${FILES_TO_INSTALL} DESTINATION ${OVERRIDE_INSTALL_DIR}/${game_name} )
+INSTALL( FILES ${FILES_TO_INSTALL} DESTINATION ${DATA_DIR}/override/${game_name} )
 ENDMACRO(ADD_GEMRB_OVERRIDE )
 
 ADD_SUBDIRECTORY( gemrb )
-INSTALL( FILES gemrb.6 DESTINATION ${MANPAGE_INSTALL_DIR} )
+INSTALL( FILES gemrb.6 DESTINATION ${MAN_DIR} )
 
 CONFIGURE_FILE(
   "${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
