--- a/gemrb/CMakeLists.txt
+++ b/gemrb/CMakeLists.txt
@@ -6,7 +6,7 @@ ADD_EXECUTABLE(gemrb GemRB.cpp )
 IF(WIN32)
  TARGET_LINK_LIBRARIES(gemrb gemrb_core)
 ELSE(WIN32)
- SET_TARGET_PROPERTIES(gemrb PROPERTIES INSTALL_RPATH ${PLUGIN_INSTALL_DIR})
+ SET_TARGET_PROPERTIES(gemrb PROPERTIES INSTALL_RPATH ${LIB_DIR})
  IF(APPLE)
   TARGET_LINK_LIBRARIES(gemrb gemrb_core ${SDL_LIBRARY} ${SDL_MAIN_LIBRARY_PATH} ${COCOA_LIBRARY_PATH} ${DLD_LIBRARY_PATH})
  ELSE(APPLE)
@@ -14,5 +14,5 @@ ELSE(WIN32)
  ENDIF(APPLE)
 ENDIF(WIN32)
 
-INSTALL( TARGETS gemrb DESTINATION ${CMAKE_INSTALL_PREFIX})
-INSTALL( FILES GemRB.cfg.sample GemRB.cfg.subdir.sample DESTINATION ${CMAKE_INSTALL_PREFIX} )
+INSTALL( TARGETS gemrb DESTINATION ${BIN_DIR} )
+INSTALL( FILES GemRB.cfg.sample GemRB.cfg.subdir.sample DESTINATION ${SYSCONF_DIR} )
