--- a/gemrb/GUIScripts/CMakeLists.txt
+++ b/gemrb/GUIScripts/CMakeLists.txt
@@ -1,6 +1,6 @@
 FILE( GLOB FILES_TO_INSTALL *.py )
 
-INSTALL( FILES ${FILES_TO_INSTALL} DESTINATION ${GUISCRIPTS_INSTALL_DIR} )
+INSTALL( FILES ${FILES_TO_INSTALL} DESTINATION ${DATA_DIR}/GUIScripts )
 
 ADD_SUBDIRECTORY( bg1 )
 ADD_SUBDIRECTORY( bg2 )
