--- a/gemrb/GUIScripts/pst/CMakeLists.txt
+++ b/gemrb/GUIScripts/pst/CMakeLists.txt
@@ -1,3 +1,3 @@
 FILE( GLOB FILES_TO_INSTALL *.py )
 
-INSTALL( FILES ${FILES_TO_INSTALL} DESTINATION ${GUISCRIPTS_INSTALL_DIR}/pst )
+INSTALL( FILES ${FILES_TO_INSTALL} DESTINATION ${DATA_DIR}/GUIScripts/pst )
