--- a/gemrb/plugins/Core/CMakeLists.txt
+++ b/gemrb/plugins/Core/CMakeLists.txt
@@ -4,8 +4,9 @@ FILE(GLOB gemrb_core_LIB_SRCS "*.cpp")
 
 ADD_LIBRARY(gemrb_core SHARED ${gemrb_core_LIB_SRCS} )
 
-IF(WIN32)
- INSTALL(TARGETS gemrb_core RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
-ELSE(WIN32)
- INSTALL(TARGETS gemrb_core LIBRARY DESTINATION ${PLUGIN_INSTALL_DIR})
-ENDIF(WIN32)
+SET_TARGET_PROPERTIES(gemrb_core PROPERTIES
+	COMPILE_DEFINITIONS
+	"PLUGINDIR=\"${PLUGIN_DIR}\";DATADIR=\"${DATA_DIR}\";SYSCONFDIR=\"${SYSCONF_DIR}\""
+	)
+
+INSTALL(TARGETS gemrb_core LIBRARY DESTINATION ${LIB_DIR})
