--- a/gemrb/GUIScripts/test1/CMakeLists.txt
+++ b/gemrb/GUIScripts/test1/CMakeLists.txt
@@ -1,3 +1,3 @@
 FILE( GLOB FILES_TO_INSTALL *.py )
 
-INSTALL( FILES ${FILES_TO_INSTALL} DESTINATION ${GUISCRIPTS_INSTALL_DIR}/test1 )
+INSTALL( FILES ${FILES_TO_INSTALL} DESTINATION ${DATA_DIR}/GUIScripts/test1 )
