cmake: Build plugins in plugin dir, obviating the need for plugins-prepare.sh.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,7 +179,8 @@ CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cmake_config.h.in ${CMAKE_CURRENT_BIN
 MACRO(ADD_GEMRB_PLUGIN plugin_name)
 	ADD_LIBRARY(${plugin_name} MODULE ${ARGN})
 	SET_TARGET_PROPERTIES(${plugin_name} PROPERTIES PREFIX ""
-		INSTALL_RPATH ${LIB_DIR})
+		INSTALL_RPATH ${LIB_DIR}
+		LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/gemrb/plugins)
 	TARGET_LINK_LIBRARIES(${plugin_name} gemrb_core)
 	INSTALL(TARGETS ${plugin_name} DESTINATION ${PLUGIN_DIR})
 ENDMACRO(ADD_GEMRB_PLUGIN)
