go back to actually copying the DLL on Windows

--- a/gemrb/plugins/Core/CMakeLists.txt
+++ b/gemrb/plugins/Core/CMakeLists.txt
@@ -9,4 +9,8 @@ SET_TARGET_PROPERTIES(gemrb_core PROPERTIES
 	"PLUGINDIR=\"${PLUGIN_DIR}\";DATADIR=\"${DATA_DIR}\";SYSCONFDIR=\"${SYSCONF_DIR}\""
 	)
 
-INSTALL(TARGETS gemrb_core LIBRARY DESTINATION ${LIB_DIR})
+IF(WIN32)
+  INSTALL(TARGETS gemrb_core RUNTIME DESTINATION ${LIB_DIR})
+ELSE(WIN32)
+  INSTALL(TARGETS gemrb_core LIBRARY DESTINATION ${LIB_DIR})
+ENDIF(WIN32)
