cmake: Actually use zlib include dir in compiling ZLIbManager.
Signed-off-by: Tom Prince <tom.prince@ualberta.net>

--- a/gemrb/plugins/ZLibManager/CMakeLists.txt
+++ b/gemrb/plugins/ZLibManager/CMakeLists.txt
@@ -1,2 +1,3 @@
+INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
 ADD_GEMRB_PLUGIN (ZLibMgr ZLibManager.cpp)
 TARGET_LINK_LIBRARIES( ZLibMgr ${ZLIB_LIBRARY} )
