--- a/gemrb/plugins/ZLibManager/CMakeLists.txt
+++ b/gemrb/plugins/ZLibManager/CMakeLists.txt
@@ -1,3 +1,3 @@
 INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
-ADD_GEMRB_PLUGIN (ZLibMgr ZLibManager.cpp)
-TARGET_LINK_LIBRARIES( ZLibMgr ${ZLIB_LIBRARY} )
+ADD_GEMRB_PLUGIN (ZLibManager ZLibManager.cpp)
+TARGET_LINK_LIBRARIES( ZLibManager ${ZLIB_LIBRARY} )
