--- a/gemrb/plugins/CMakeLists.txt
+++ b/gemrb/plugins/CMakeLists.txt
@@ -1,5 +1,7 @@
 ADD_SUBDIRECTORY( 2DAImporter )
-ADD_SUBDIRECTORY( ACMImporter )
+ADD_SUBDIRECTORY( ACMReader )
+ADD_SUBDIRECTORY( WAVReader )
+ADD_SUBDIRECTORY( OGGReader )
 ADD_SUBDIRECTORY( AREImporter )
 ADD_SUBDIRECTORY( BAMImporter )
 ADD_SUBDIRECTORY( BIFImporter )
