--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -231,6 +231,14 @@ CONFIGURE_FILE(
   IMMEDIATE @ONLY
 )
 
+# copy the variable, since the file uses @VERSION@
+set(VERSION ${GEMRB_VERSION})
+CONFIGURE_FILE(
+  "${CMAKE_CURRENT_SOURCE_DIR}/gemrb.spec.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/gemrb.spec"
+  IMMEDIATE @ONLY
+)
+
 ADD_CUSTOM_TARGET( uninstall
   "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake" )
 
