added a 64x64 version of the logo and made cmake install it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,9 @@ if (${LAYOUT} MATCHES "home")
 	IF( NOT LIB_DIR )
 		SET( LIB_DIR ${CMAKE_INSTALL_PREFIX} )
 	ENDIF( NOT LIB_DIR )
+	IF( NOT ICON_DIR )
+		SET( ICON_DIR ${CMAKE_INSTALL_PREFIX} )
+	ENDIF( NOT ICON_DIR )
 elseif (${LAYOUT} MATCHES "fhs")
 	IF( NOT LIB_DIR )
 		SET( LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib/gemrb )
@@ -79,6 +82,9 @@ elseif (${LAYOUT} MATCHES "fhs")
 	IF( NOT SYSCONF_DIR )
 		SET( SYSCONF_DIR ${CMAKE_INSTALL_PREFIX}/etc/gemrb )
 	ENDIF( NOT SYSCONF_DIR )
+	IF( NOT ICON_DIR )
+		SET( ICON_DIR ${CMAKE_INSTALL_PREFIX}/share/pixmaps )
+	ENDIF( NOT ICON_DIR )
 else (${LAYOUT} MATCHES "opt")
 	IF( NOT LIB_DIR )
 		SET( LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib )
@@ -98,6 +104,9 @@ else (${LAYOUT} MATCHES "opt")
 	IF( NOT SYSCONF_DIR )
 		SET( SYSCONF_DIR ${CMAKE_INSTALL_PREFIX}/etc )
 	ENDIF( NOT SYSCONF_DIR )
+	IF( NOT ICON_DIR )
+		SET( ICON_DIR ${CMAKE_INSTALL_PREFIX}/share/pixmaps )
+	ENDIF( NOT ICON_DIR )
 endif (${LAYOUT} MATCHES "home")
 
 
@@ -224,6 +233,7 @@ ENDMACRO(ADD_GEMRB_OVERRIDE )
 
 ADD_SUBDIRECTORY( gemrb )
 INSTALL( FILES gemrb.6 DESTINATION ${MAN_DIR} )
+INSTALL( FILES gemrb-logo.png DESTINATION ${ICON_DIR} )
 
 CONFIGURE_FILE(
   "${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
