added a .desktop file, so we'll get into the wm menu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,9 @@ if (${LAYOUT} MATCHES "home")
 	IF( NOT ICON_DIR )
 		SET( ICON_DIR ${CMAKE_INSTALL_PREFIX} )
 	ENDIF( NOT ICON_DIR )
+	IF( NOT MENU_DIR )
+		SET( MENU_DIR ${CMAKE_INSTALL_PREFIX} )
+	ENDIF( NOT MENU_DIR )
 elseif (${LAYOUT} MATCHES "fhs")
 	IF( NOT LIB_DIR )
 		SET( LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib/gemrb )
@@ -85,6 +88,9 @@ elseif (${LAYOUT} MATCHES "fhs")
 	IF( NOT ICON_DIR )
 		SET( ICON_DIR ${CMAKE_INSTALL_PREFIX}/share/pixmaps )
 	ENDIF( NOT ICON_DIR )
+	IF( NOT MENU_DIR )
+		SET( MENU_DIR ${CMAKE_INSTALL_PREFIX}/share/applications )
+	ENDIF( NOT MENU_DIR )
 else (${LAYOUT} MATCHES "opt")
 	IF( NOT LIB_DIR )
 		SET( LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib )
@@ -107,6 +113,9 @@ else (${LAYOUT} MATCHES "opt")
 	IF( NOT ICON_DIR )
 		SET( ICON_DIR ${CMAKE_INSTALL_PREFIX}/share/pixmaps )
 	ENDIF( NOT ICON_DIR )
+	IF( NOT MENU_DIR )
+		SET( MENU_DIR ${CMAKE_INSTALL_PREFIX}/share/applications )
+	ENDIF( NOT MENU_DIR )
 endif (${LAYOUT} MATCHES "home")
 
 
@@ -234,6 +243,7 @@ ENDMACRO(ADD_GEMRB_OVERRIDE )
 ADD_SUBDIRECTORY( gemrb )
 INSTALL( FILES gemrb.6 DESTINATION ${MAN_DIR} )
 INSTALL( FILES gemrb-logo.png DESTINATION ${ICON_DIR} )
+INSTALL( FILES gemrb.desktop DESTINATION ${MENU_DIR} )
 
 CONFIGURE_FILE(
   "${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
