--- a/gemrb/override/how/gemrb.ini
+++ b/gemrb/override/how/gemrb.ini
@@ -79,6 +79,7 @@ SpawnIni = 1
 SelectiveMagicRes = 1
 HasHideInShadows = 1
 AreaVisitedVar = 1
+HasSpecificDamageBonus = 1
 
 [charset]
 CharCount = 31
