--- a/gemrb/override/iwd/gemrb.ini
+++ b/gemrb/override/iwd/gemrb.ini
@@ -77,6 +77,7 @@ CharNameIsGabber = 1
 SpawnIni = 1
 HasHideInShadows = 1
 AreaVisitedVar = 1
+HasSpecificDamageBonus = 0
 
 [charset]
 CharCount = 31
