--- a/gemrb/GemRB.cfg.sample
+++ b/gemrb/GemRB.cfg.sample
@@ -73,10 +73,8 @@ TooltipDelay=500
 #                                                   #
 #####################################################
 
-# Load NullSound driver only if OpenALAudio driver failed
-DelayPlugin=NullSound.so
-DelayPlugin=NullSound.dll
-DelayPlugin=libNullSound.dll
+# Choices: openal (default), none
+#AudioDriver = openal
 
 # Volume of ambient sounds
 VolumeAmbients = 100
