cmake: Put path variables in config.h rather thand command-line.
Apparently msvc6 doesn't like quotes in marcos passed on the command-line.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -225,7 +225,8 @@ IF(APPLE)
  FIND_LIBRARY(COCOA_LIBRARY_PATH Cocoa)
 ENDIF(APPLE)
 
-CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cmake_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
+CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cmake_config.h.in
+	${CMAKE_CURRENT_BINARY_DIR}/config.h ESCAPE_QUOTES)
 
 #Plugin addition macro
 MACRO(ADD_GEMRB_PLUGIN plugin_name)
