added an artwork/ dir to store all the logos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -245,7 +245,7 @@ ENDMACRO(ADD_GEMRB_OVERRIDE )
 
 ADD_SUBDIRECTORY( gemrb )
 INSTALL( FILES gemrb.6 DESTINATION ${MAN_DIR} )
-INSTALL( FILES gemrb-logo.png DESTINATION ${ICON_DIR} )
+INSTALL( FILES artwork/gemrb-logo.png DESTINATION ${ICON_DIR} )
 INSTALL( FILES gemrb.desktop DESTINATION ${MENU_DIR} )
 
 CONFIGURE_FILE(
