--- a/cmake_config.h.in
+++ b/cmake_config.h.in
@@ -10,6 +10,6 @@
 #endif
 #cmakedefine HAVE_FORBIDDEN_OBJECT_TO_FUNCTION_CAST 1
 #cmakedefine HAS_VORBIS_SUPPORT 1
-#define PLUGIN_DIR "${PLUGIN_DIR}"
-#define DATA_DIR "${DATA_DIR}"
-#define SYSCONF_DIR "${SYSCONF_DIR}"
+#define PLUGINDIR "${PLUGIN_DIR}"
+#define DATADIR "${DATA_DIR}"
+#define SYSCONFDIR "${SYSCONF_DIR}"
