--- a/gemrb/plugins/GUIScript/Makefile.am
+++ b/gemrb/plugins/GUIScript/Makefile.am
@@ -2,4 +2,4 @@ plugin_LTLIBRARIES = GUIScript.la
 INCLUDES = $(PYTHON_INCLUDES)
 GUIScript_la_LDFLAGS = -module -avoid-version -shared
 GUIScript_la_LIBADD = @PYTHON_LIBS@
-GUIScript_la_SOURCES = GUIScript.cpp GUIScript.h
+GUIScript_la_SOURCES = GUIScript.cpp GUIScript.h PythonHelpers.h
