--- a/configure.in
+++ b/configure.in
@@ -29,6 +29,14 @@ dnl Initialize autoconf and automake
 AC_PREREQ([2.57])
 AC_INIT(gemrb, 0.6.0)
 
+AC_MSG_WARN([
+
+
+The autotools build system is NO LONGER MAINTAINED and may be dropped in
+future versions! Please switch to using cmake instead.
+
+])
+
 AC_CONFIG_AUX_DIR([admin])
 AC_CONFIG_SRCDIR([gemrb/])
 AC_CANONICAL_SYSTEM
