cmake: Use SYSCONF_DIR=/etc for fhs build into /usr.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,7 +83,11 @@ elseif (${LAYOUT} MATCHES "fhs")
 		SET( BIN_DIR ${CMAKE_INSTALL_PREFIX}/bin )
 	ENDIF( NOT BIN_DIR )
 	IF( NOT SYSCONF_DIR )
-		SET( SYSCONF_DIR ${CMAKE_INSTALL_PREFIX}/etc/gemrb )
+		if ( ${CMAKE_INSTALL_PREFIX} STREQUAL "/usr" )
+			SET( SYSCONF_DIR /etc/gemrb )
+		else ()
+			SET( SYSCONF_DIR ${CMAKE_INSTALL_PREFIX}/etc/gemrb )
+		endif ()
 	ENDIF( NOT SYSCONF_DIR )
 	IF( NOT ICON_DIR )
 		SET( ICON_DIR ${CMAKE_INSTALL_PREFIX}/share/pixmaps )
