cmake: install the docs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,9 @@ if (${LAYOUT} MATCHES "home")
 	IF( NOT LIB_DIR )
 		SET( LIB_DIR ${CMAKE_INSTALL_PREFIX} )
 	ENDIF( NOT LIB_DIR )
+	IF( NOT DOC_DIR )
+		SET( DOC_DIR ${CMAKE_INSTALL_PREFIX}/doc )
+	ENDIF( NOT DOC_DIR )
 	IF( NOT ICON_DIR )
 		SET( ICON_DIR ${CMAKE_INSTALL_PREFIX} )
 	ENDIF( NOT ICON_DIR )
@@ -89,6 +92,9 @@ elseif (${LAYOUT} MATCHES "fhs")
 			SET( SYSCONF_DIR ${CMAKE_INSTALL_PREFIX}/etc/gemrb )
 		endif ()
 	ENDIF( NOT SYSCONF_DIR )
+	IF( NOT DOC_DIR )
+		SET( DOC_DIR ${CMAKE_INSTALL_PREFIX}/share/doc/gemrb )
+	ENDIF( NOT DOC_DIR )
 	IF( NOT ICON_DIR )
 		SET( ICON_DIR ${CMAKE_INSTALL_PREFIX}/share/pixmaps )
 	ENDIF( NOT ICON_DIR )
@@ -114,6 +120,9 @@ else (${LAYOUT} MATCHES "opt")
 	IF( NOT SYSCONF_DIR )
 		SET( SYSCONF_DIR ${CMAKE_INSTALL_PREFIX}/etc )
 	ENDIF( NOT SYSCONF_DIR )
+	IF( NOT DOC_DIR )
+		SET( DOC_DIR ${CMAKE_INSTALL_PREFIX}/share/doc/gemrb )
+	ENDIF( NOT DOC_DIR )
 	IF( NOT ICON_DIR )
 		SET( ICON_DIR ${CMAKE_INSTALL_PREFIX}/share/pixmaps )
 	ENDIF( NOT ICON_DIR )
