--- a/gemrb/CMakeLists.txt
+++ b/gemrb/CMakeLists.txt
@@ -2,6 +2,7 @@ ADD_SUBDIRECTORY( core )
 ADD_SUBDIRECTORY( plugins )
 ADD_SUBDIRECTORY( override )
 ADD_SUBDIRECTORY( GUIScripts )
+ADD_SUBDIRECTORY( docs )
 
 ADD_EXECUTABLE(gemrb GemRB.cpp )
 SET_TARGET_PROPERTIES(gemrb PROPERTIES INSTALL_RPATH ${LIB_DIR})
