--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -266,6 +266,7 @@ ADD_SUBDIRECTORY( gemrb )
 INSTALL( FILES gemrb.6 DESTINATION ${MAN_DIR} )
 INSTALL( FILES artwork/gemrb-logo.png DESTINATION ${ICON_DIR} )
 INSTALL( FILES gemrb.desktop DESTINATION ${MENU_DIR} )
+INSTALL( FILES README INSTALL COPYING NEWS AUTHORS DESTINATION ${DOC_DIR} )
 
 CONFIGURE_FILE(
   "${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
