--- a/gemrb/override/Makefile.am
+++ b/gemrb/override/Makefile.am
@@ -1,2 +1,2 @@
-SUBDIRS = bg1 bg2 how iwd iwd2 pst test1 shared
+SUBDIRS = bg1 bg2 how iwd iwd2 pst shared
 EXTRA_DIST = CMakeLists.txt */CMakeLists.txt
