added wisdom (xp) bonus handling

--- a/gemrb/override/pst/gemrb.ini
+++ b/gemrb/override/pst/gemrb.ini
@@ -77,6 +77,7 @@ HasResDataIni = 1
 OverrideCursorPos = 1
 OnScreenText = 1
 HasSpecificDamageBonus = 0
+HasWisdomBonusTable = 1
 
 [charset]
 CharCount = 31
