--- a/gemrb/plugins/GUIScript/CMakeLists.txt
+++ b/gemrb/plugins/GUIScript/CMakeLists.txt
@@ -1,5 +1,5 @@
 INCLUDE(FindPythonLibs)
 
 INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
-ADD_GEMRB_PLUGIN (GUIScript GUIScript.cpp)
+ADD_GEMRB_PLUGIN (GUIScript GUIScript.cpp PythonHelpers.cpp)
 TARGET_LINK_LIBRARIES( GUIScript ${PYTHON_LIBRARIES} )
