cmake: Link PNGImporter against all required libraries.
Signed-off-by: Tom Prince <tom.prince@ualberta.net>

--- a/gemrb/plugins/PNGImporter/CMakeLists.txt
+++ b/gemrb/plugins/PNGImporter/CMakeLists.txt
@@ -1,5 +1,5 @@
 IF(PNG_FOUND)
 INCLUDE_DIRECTORIES( ${PNG_INCLUDE_DIR} )
 ADD_GEMRB_PLUGIN (PNGImporter PNGImporter.cpp)
-TARGET_LINK_LIBRARIES( PNGImporter ${PNG_LIBRARY} )
+TARGET_LINK_LIBRARIES( PNGImporter ${PNG_LIBRARIES} )
 ENDIF( PNG_FOUND )
