--- a/gemrb/core/Makefile.am
+++ b/gemrb/core/Makefile.am
@@ -2,113 +2,113 @@ lib_LTLIBRARIES = libgemrb_core.la
 libgemrb_core_la_LDFLAGS = -version-info 0:0:0 @LIBDL@
 AM_CPPFLAGS = -DGEM_BUILD_DLL
 libgemrb_core_la_SOURCES = \
-	Audio.cpp \
-	Progressbar.cpp \
-	ScriptedAnimation.cpp \
-	GameScript.cpp \
 	Actions.cpp \
-	Triggers.cpp \
-	GSUtils.cpp \
-	GlobalTimer.cpp \
-	Polygon.cpp \
-	Game.cpp \
-	GameControl.cpp \
-	Variables.cpp \
-	SaveGameIterator.cpp \
-	DataFileMgr.cpp \
-	TableMgr.cpp \
-	MusicMgr.cpp \
-	SoundMgr.cpp \
-	Console.cpp \
-	ScriptEngine.cpp \
-	TextEdit.cpp \
-	EventMgr.cpp \
-	ScrollBar.cpp \
-	TextArea.cpp \
-	Slider.cpp \
-	Label.cpp \
-	WindowMgr.cpp \
-	Window.cpp \
-	VideoModes.cpp \
-	VideoMode.cpp \
-	Video.cpp \
-	VFS.cpp \
-	TileSetMgr.cpp \
-	TileOverlay.cpp \
-	TileMapMgr.cpp \
-	TileMap.cpp \
-	Tile.cpp \
-	WorldMap.cpp \
-	WorldMapMgr.cpp \
-	SymbolMgr.cpp \
-	StringMgr.cpp \
-	Sprite2D.cpp \
-	Resource.cpp \
-	ResourceDesc.cpp \
-	ResourceSource.cpp \
-	Region.cpp \
-	PluginMgr.cpp \
-	Plugin.cpp \
-	MoviePlayer.cpp \
-	MemoryStream.cpp \
-	MapMgr.cpp \
-	Map.cpp \
-	Interface.cpp \
-	ResourceManager.cpp \
-	GameData.cpp \
-	ImageMgr.cpp \
-	PalettedImageMgr.cpp \
-	ImageFactory.cpp \
-	Font.cpp \
-	FileStream.cpp \
-	FactoryObject.cpp \
-	Factory.cpp \
-	DataStream.cpp \
-	Core.cpp \
-	Control.cpp \
-	Compressor.cpp \
-	CharAnimations.cpp \
-	CachedFileStream.cpp \
-	Button.cpp \
-	ArchiveImporter.cpp \
-	AnimationMgr.cpp \
-	AnimationFactory.cpp \
-	Animation.cpp \
-	ActorMgr.cpp \
 	Actor.cpp \
 	ActorBlock.cpp \
-	SaveGameMgr.cpp \
-	DialogMgr.cpp \
-	Dialog.cpp \
-	SpellMgr.cpp \
-	Spell.cpp \
-	ItemMgr.cpp \
-	Item.cpp \
-	StoreMgr.cpp \
-	Store.cpp \
-	Inventory.cpp \
-	Spellbook.cpp \
+	ActorMgr.cpp \
 	Ambient.cpp \
-	WorldMapControl.cpp \
-	MapControl.cpp \
 	AmbientMgr.cpp \
-	EffectQueue.cpp \
+	Animation.cpp \
+	AnimationFactory.cpp \
+	AnimationMgr.cpp \
+	ArchiveImporter.cpp \
+	Audio.cpp \
+	Bitmap.cpp \
+	Button.cpp \
 	Cache.cpp \
+	CachedFileStream.cpp \
+	Calendar.cpp \
+	Callback.cpp \
+	CharAnimations.cpp \
+	Compressor.cpp \
+	Console.cpp \
+	Control.cpp \
 	ControlAnimation.cpp \
+	Core.cpp \
+	DataFileMgr.cpp \
+	DataStream.cpp \
+	Dialog.cpp \
+	DialogMgr.cpp \
 	EffectMgr.cpp \
-	SpriteCover.cpp \
+	EffectQueue.cpp \
+	EventMgr.cpp \
+	Factory.cpp \
+	FactoryObject.cpp \
+	FileStream.cpp \
+	Font.cpp \
+	GSUtils.cpp \
+	Game.cpp \
+	GameControl.cpp \
+	GameData.cpp \
+	GameScript.cpp \
+	GlobalTimer.cpp \
+	Image.cpp \
+	ImageFactory.cpp \
+	ImageMgr.cpp \
+	ImageWriter.cpp \
+	IniSpawn.cpp \
+	Interface.cpp \
+	Inventory.cpp \
+	Item.cpp \
+	ItemMgr.cpp \
+	LRUCache.cpp \
+	Label.cpp \
+	Map.cpp \
+	MapControl.cpp \
+	MapMgr.cpp \
+	MemoryStream.cpp \
+	MoviePlayer.cpp \
+	MusicMgr.cpp \
 	PCStatStruct.cpp \
 	Palette.cpp \
-	ProjectileMgr.cpp \
-	Projectile.cpp \
-	ProjectileServer.cpp \
+	PalettedImageMgr.cpp \
 	Particles.cpp \
-	IniSpawn.cpp \
-	LRUCache.cpp \
-	Calendar.cpp \
-	ImageWriter.cpp \
-	Bitmap.cpp \
-	Image.cpp \
-	Callback.cpp
+	Plugin.cpp \
+	PluginMgr.cpp \
+	Polygon.cpp \
+	Progressbar.cpp \
+	Projectile.cpp \
+	ProjectileMgr.cpp \
+	ProjectileServer.cpp \
+	Region.cpp \
+	Resource.cpp \
+	ResourceDesc.cpp \
+	ResourceManager.cpp \
+	ResourceSource.cpp \
+	SaveGameIterator.cpp \
+	SaveGameMgr.cpp \
+	ScriptEngine.cpp \
+	ScriptedAnimation.cpp \
+	ScrollBar.cpp \
+	Slider.cpp \
+	SoundMgr.cpp \
+	Spell.cpp \
+	SpellMgr.cpp \
+	Spellbook.cpp \
+	Sprite2D.cpp \
+	SpriteCover.cpp \
+	Store.cpp \
+	StoreMgr.cpp \
+	StringMgr.cpp \
+	SymbolMgr.cpp \
+	TableMgr.cpp \
+	TextArea.cpp \
+	TextEdit.cpp \
+	Tile.cpp \
+	TileMap.cpp \
+	TileMapMgr.cpp \
+	TileOverlay.cpp \
+	TileSetMgr.cpp \
+	Triggers.cpp \
+	VFS.cpp \
+	Variables.cpp \
+	Video.cpp \
+	VideoMode.cpp \
+	VideoModes.cpp \
+	Window.cpp \
+	WindowMgr.cpp \
+	WorldMap.cpp \
+	WorldMapControl.cpp \
+	WorldMapMgr.cpp
 
 noinst_HEADERS = *.h
